--- a/src/app/compartidos/modal-impuestos/modal-impuestos.component.html
+++ b/src/app/compartidos/modal-impuestos/modal-impuestos.component.html
@@ -42,7 +42,8 @@
                         <td>{{ impuesto.tipoFactor.toLowerCase() == 'tasa'? (impuesto.tasaOCuota | percent)
                           :(impuesto.tasaOCuota | currency: '$' )}}</td>
                         <td>{{impuesto.tipoFactor}}</td>
-                        <td>{{impuesto.base | currency: '$'}}</td>
+                        <td>{{impuesto.base? (impuesto.base | currency: '$') : impuesto._base? (impuesto._base |
+                          currency: '$') : '' }}</td>
                         <td>{{impuesto.importe | currency: '$'}}</td>
                       </tr>
                     </tbody>
