--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.css
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.css
@@ -4,3 +4,20 @@ table {
 textarea {
   resize: none;
 }
+
+.ajustar {
+  /* word-break: break-all; */
+  width: 150px !important;
+  max-width: 150px !important;
+}
+
+.ajustar_nota {
+  /* word-break: break-all; */
+  width: 200px !important;
+  max-width: 200px !important;
+}
+
+.ajustar_ta {
+  width: 100px !important;
+  max-width: 100px !important;
+}
