--- a/src/app/compartidos/comprobacion-components/filtro-aprobacion-shared/filtro-aprobacion-shared.component.html
+++ b/src/app/compartidos/comprobacion-components/filtro-aprobacion-shared/filtro-aprobacion-shared.component.html
@@ -14,39 +14,30 @@
                 <legend class="p-b-15" style="font-size:1rem">Filtrar Comprobaciones</legend>
 
                 <div class="form-row ">
-
-                  <div *ngIf="usuario.asistente" class="col-md-3 mt-2">
-                    <label for="empleado_supl">{{ is_flujo_aprobacion? 'Aprobador' : 'Usuario' }}</label>
-                    <select2 [data]="lista_aprobadores" [value]="(identificador_aprobador)" [cssImport]=true
-                      class="left" (valueChanged)="onAprobadorSelected($event)"
-                      [options]="{placeholder: 'Seleccione aprobador'}" name="aprobador" id="aprobador">
-                    </select2>
-                  </div>
+                  <ng-container *ngIf="usuario.asistente && asistente_vista">
+                    <div class="col-md-3 mt-2">
+                      <label for="selec_asistido_usuario">Aprobador </label>
+                      <select2 [data]="lista_aprobadores" [options]="{placeholder: 'Seleccione Aprobador...'}"
+                        (valueChanged)="onAprobadorSelected($event)" name="selec_asistido_usuario"
+                        id="selec_asistido_usuario_solicitudes">
+                      </select2>
+                    </div>
+                  </ng-container>
 
                   <div class="col-md-3 mt-2">
                     <label for="contribuyente">Contribuyente<span class="text-danger">*</span> </label>
-                    <select2 [data]="lista_contribuyentes" [options]="{placeholder: 'Seleccione una Contribuyente'}"
+                    <select2 [data]="lista_contribuyentes" [options]="{placeholder: 'Seleccione un Contribuyente'}"
                       (valueChanged)="onContribuyenteSelected($event)" name="contribuyente"
                       id="selec_contribuyente_gasto_viaje">
                     </select2>
                   </div>
 
-                  <!-- <div class="col-md-3 mt-2">
+                  <div class="col-md-3 mt-2">
                     <label for="selec_sucursal_gasto_viaje">Centro de Costos </label>
                     <select2 [data]="lista_centros_costo" [options]="{placeholder: 'Seleccione Centro Costo'}"
-                      (valueChanged)="onCentroCostoSelected($event)" [(ngModel)]="identificador_centro_costo"
-                      [disabled]="!is_flujo_aprobacion" [ngModelOptions]="{standalone: true}">
+                      (valueChanged)="onCentroCostoSelected($event)" [value]="identificador_centro_costo"
+                      name="centro_costo" id="centro_costo" [disabled]="!is_flujo_aprobacion">
                     </select2>
-                  </div> -->
-
-                  <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-                    <label for="cnetro_costos">Centro de Costos <span class="requerido">*</span> </label>
-                    <select class="form-control" formControlName="identificador_cc" name="corporativo"
-                      [(ngModel)]="identificador_centro_costo" [disabled]="!is_flujo_aprobacion">
-                      <option *ngFor="let item of lista_centros_costo"
-                        [attr.selected]="item.identificador ==  this.identificador_centro_costo ? true : null ">
-                        {{ item.centro_consumo }}</option>
-                    </select>
                   </div>
 
                   <div *ngIf="is_flujo_aprobacion" class="col-md-3 mt-2">
@@ -72,14 +63,6 @@
                     </select2>
                   </div>
 
-                  <div *ngIf="usuario.asistente && asistente_vista" class="col-md-3 mt-2">
-                    <label for="selec_asistido_usuario"> </label>
-                    <select2 [data]="lista_asistido" [options]="{placeholder: 'Seleccione Usuario Asistido'}"
-                      (valueChanged)="onAsistidoSeleccionado($event)" name="selec_asistido_usuario"
-                      id="selec_asistido_usuario_solicitudes">
-                    </select2>
-                  </div>
-
                   <div class="col-md-3 mt-2">
                     <label for="nombre">Fecha Creación Desde </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_ini" name="fechaIniViaje"
@@ -91,7 +74,8 @@
                     <label for="nombre">Fecha Creación Hasta </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_fin"
                       name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap" [placeholder]="'Creación Hasta'"
-                      [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaFinViaje($event)"></my-date-picker>
+                      [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaFinViaje($event)">
+                    </my-date-picker>
                   </div>
 
                 </div>
@@ -99,9 +83,12 @@
                 <div class="form-group row">
                   <div class=" col-sm-12 text-right">
                     <button [disabled]="limpiar_disable" class="btn btn-sm btn-danger m-r-5 " style="margin-left: 10px;"
-                      (click)="limpiar()">Limpiar</button>
-                    <button class="btn btn-sm btn-primary m-r-5 " style="margin-left: 10px;"
-                      (click)="buscar()">Buscar</button>
+                      (click)="limpiar()">
+                      Limpiar
+                    </button>
+                    <button class="btn btn-sm btn-primary m-r-5 " style="margin-left: 10px;" (click)="buscar()">
+                      Buscar
+                    </button>
                   </div>
                 </div>
 
