[upd] actualizar filtro bandeja de aprobacion

--- a/src/app/compartidos/comprobacion-components/filtro-aprobacion-shared/filtro-aprobacion-shared.component.html
+++ b/src/app/compartidos/comprobacion-components/filtro-aprobacion-shared/filtro-aprobacion-shared.component.html
@@ -14,7 +14,7 @@
                 <legend class="p-b-15" style="font-size:1rem">Filtrar Comprobaciones</legend>
 
                 <div class="form-row ">
-                  <ng-container *ngIf="usuario.asistente && asistente_vista">
+                  <!-- <ng-container *ngIf="usuario.asistente && asistente_vista">
                     <div class="col-md-3 mt-2">
                       <label for="selec_asistido_usuario">Aprobador </label>
                       <select2 [data]="lista_aprobadores" [options]="{placeholder: usuario.nombre}"
@@ -22,7 +22,7 @@
                         id="selec_asistido_usuario_solicitudes">
                       </select2>
                     </div>
-                  </ng-container>
+                  </ng-container> -->
 
                   <div class="col-md-3 mt-2">
                     <label for="contribuyente">Contribuyente<span class="text-danger">*</span> </label>
