--- a/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
+++ b/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
@@ -18,7 +18,7 @@
                 <th scope=""> Forma de Pago</th>
                 <th scope=""> Razón social</th>
                 <th scope=""> Moneda</th>
-                <th scope=""> Monto Reembolsar</th>
+                <th scope=""> Monto Reembolsar (MXN) </th>
               </tr>
             </thead>
             <tbody>
