--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -19,7 +19,7 @@
           <th scope="col">Importe</th>
           <th style="width: 250px;" scope="col">Concepto</th>
           <th *ngIf="requiere_numero_dias" scope="col">Numero Dias</th>
-          <th scope="col">Monto a Reembolsar</th>
+          <th scope="col">Monto a Reembolsar (MXN) </th>
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
           <th scope="col">Aplica</th>
