--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -109,7 +109,7 @@
             <th scope="col">Importe</th>
             <th scope="col">Moneda</th>
             <th style="width: 150px;" scope="col">Concepto</th>
-            <th scope="col">Monto a Reembolsar</th>
+            <th scope="col">Monto a Reembolsar (MXN) </th>
             <th scope="col">Aplica</th>
             <th scope="col">Acciones</th>
           </tr>
@@ -167,7 +167,7 @@
   </ng-container>
   <div class="row mt-3">
     <div class="col-md-3 ml-auto ">
-      <label for="tipo_cambio">Total a Reembolsar:</label>
+      <label for="tipo_cambio">Total a Reembolsar (MXN)</label>
       <input currencyMask [options]="{ thousands: ',', decimal: '.' }" type="text" name="tipo_cambio" id="tipo_cambio'"
         maxlength="50" class="form-control" formControlName="total" placeholder="" disabled>
     </div>
