--- a/src/app/compartidos/comprobacion-components/rowchild-comprobante/rowchild-comprobante.component.html
+++ b/src/app/compartidos/comprobacion-components/rowchild-comprobante/rowchild-comprobante.component.html
@@ -13,7 +13,7 @@
             <th scope="col">Cantidad</th>
             <th scope="col">Importe</th>
             <th style="width: 250px;" scope="col">Concepto</th>
-            <th scope="col">Monto a Reembolsar</th>
+            <th scope="col">Monto a Reembolsar (MXN) </th>
             <th scope="col">Comprobante Fiscal</th>
             <th scope="col">Aplica</th>
           </tr>
