--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -99,7 +99,7 @@
                           <th scope="col">Cantidad</th>
                           <th scope="col">Importe</th>
                           <th style="width: 250px;" scope="col">Concepto</th>
-                          <th scope="col">Monto a Reembolsar</th>
+                          <th scope="col">Monto a Reembolsar (MXN)</th>
                           <th *ngIf="comprobante.xml" scope="col">Impuestos</th>
                           <th *ngIf="comprobante.xml" scope="col">Comprobante Fiscal</th>
                           <th scope="col">Aplica</th>
