--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -33,7 +33,7 @@
               <th scope="" class="text-center">Moneda</th>
               <th scope="" class="text-center">Total Reembolso</th>
               <th scope="" class="text-center">Jefe Inmediato</th>
-              <th scope="" class="text-center">Estatus</th>
+              <!-- <th scope="" class="text-center">Estatus</th> -->
               <th scope="" class="text-center">Acciónes </th>
             </tr>
           </thead>
@@ -74,12 +74,12 @@
               </td>
               <td>{{ item.nombre_usuario_aprobador}}</td>
 
-              <td class='ajustar_nota'>
+              <!-- <td class='ajustar_nota'>
                 <div>
                   {{ item.estatus }} {{ item.nivel_aprobacion !== ''? '-' : '' }}
                   {{item.nivel_aprobacion}}
                 </div>
-              </td>
+              </td> -->
 
               <td>
                 <div style="white-space: nowrap">
