--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -108,6 +108,7 @@
             <th scope="col">Cantidad</th>
             <th scope="col">Importe</th>
             <th scope="col">Moneda</th>
+            <th scope="col">Tipo Cambio</th>
             <th style="width: 150px;" scope="col">Concepto</th>
             <th scope="col">Monto a Reembolsar (MXN) </th>
             <th scope="col">Aplica</th>
@@ -133,13 +134,16 @@
             </th>
             <th class="text-right" scope="">
               <!-- <input currencyMask [options]="{ thousands: ',', decimal: '.' }" disabled [value]="item.importe"
-                type="text" name="importe" maxlength="20" class="form-control" readonly> -->
+                  type="text" name="importe" maxlength="20" class="form-control" readonly> -->
               <div class="valor-curency">{{ item.importe | currency: '$' }}</div>
             </th>
             <th scope="">
               <select2 [data]="lista_monedas" [options]="{placeholder: 'Seleccione Moneda... '}" disabled
                 [value]="item? item.id_moneda :''" name="moneda" id="moneda" [disabled]="item? true : false">
               </select2>
+            </th>
+            <th scope="">
+              <div class="valor-curency">{{ item.tipo_cambio | currency: '$' }}</div>
             </th>
             <th scope="">
               <select2 [data]="lista_cuentas" [options]="{placeholder: 'Seleccione item... '}" disabled
