--- a/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
@@ -13,13 +13,13 @@
           <caption></caption>
           <thead>
             <tr>
-              <th scope="" class="text-center">Estatus</th>
+              <!-- <th scope="" class="text-center">Estatus</th> -->
               <th scope="" class="text-center">Folio <br> Comprobación</th>
               <th scope="" class="text-center">Usuario</th>
               <th scope="" class="text-center">Destino</th>
               <th scope="" class="text-center">Motivo</th>
               <th scope="" class="text-center">Fecha Creación</th>
-              <th scope="" class="text-center">Monto <br> Reembolsar</th>
+              <th scope="" class="text-center">Monto <br> Reembolsar (MXN) </th>
               <th scope="" class="text-center">Moneda</th>
               <th scope="" class="text-center">Centro Costo</th>
               <th scope="" class="text-center">Compañía</th>
@@ -29,7 +29,7 @@
 
           <tbody>
             <tr class="gradeU" *ngFor="let item of lista_comprobantes">
-              <td>{{ item.estatus}}</td>
+              <!-- <td>{{ item.estatus}}</td> -->
               <td class="ajustar_ta">{{ item.folio_comprobacion}}</td>
               <td>{{ item.nombre_usuario}}</td>
               <td> <span [title]="item.descripcion"> {{ item.descripcion.substring(0, 100) }}{{ item.descripcion.length
