--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
@@ -35,7 +35,7 @@
 
 <app-lista-comprobantes-carga *ngIf="numero_comprobacion" [lista_comprobaciones]="lista_comprobantes"
   [comprobante]="comprobacion_header" [numero_comprobacion]="numero_comprobacion" [totales]="totales"
-  (onEliminarComprobante)="eliminarComprobante($event)" (onCancelar)="cancelar()" (onComprobar)="comprobar()"
+  (onEliminarComprobante)="eliminarComprobante($event)" (onCancelar)="cancelar()" (onComprobar)="comprobar($event)"
   (onEliminarComprobacion)="eliminarComprobacion()" [lista_cuentas]="lista_cuentas"
   (onActualizarConceptosSuccess)="this.obtenerComprobacion()" (onAprobarComprobacion)="procesarAprobacion($event)"
   (onSolicitarCambiosComprobacion)="solicitarCambiosComprobacion($event)"
