[fix] bandera aprobacion en get comprobacion

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -4,7 +4,7 @@
       <caption></caption>
       <thead>
         <tr>
-          <th *ngIf="aprobacion_data.is_aprobacion || is_borrador" scope="col"> <input type="checkbox"
+          <th scope="col"> <input *ngIf="aprobacion_data.is_aprobacion || is_borrador" type="checkbox"
               [checked]="allChecked" (click)="onSelectAll()" /> </th>
           <th scope="col">#</th>
           <th scope="col">Estatus</th>
@@ -20,7 +20,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of lista_comprobaciones; let i=index">
-          <td *ngIf="aprobacion_data.is_aprobacion || item.estatus.toLowerCase() == 'borrador'"> <input type="checkbox"
+          <td> <input *ngIf="aprobacion_data.is_aprobacion || item.estatus.toLowerCase() == 'borrador'" type="checkbox"
               [checked]="item.checked" (click)="onCheckedClick($event.target.checked, item)" /> </td>
           <td>{{ i + 1 }}</td>
           <td>{{ item.estatus }}</td>
@@ -105,7 +105,7 @@
               #btn_enviar class="btn btn-primary m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="enviarComprobacion(btn_enviar)"> Comprobar</button>
-            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion" #btn_enviar class="btn btn-primary m-2"
+            <button *ngIf="(aprobacion_data && aprobacion_data.is_aprobacion)" #btn_enviar class="btn btn-primary m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="aprobarComprobacion(btn_enviar)"> Aprobar </button>
           </div>
