--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-list/caja-chica-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-list/caja-chica-list.component.html
@@ -32,6 +32,7 @@
               <th scope="">Moneda</th>
               <th scope="">Total Reembolso</th>
               <th scope="">Jefe Inmediato</th>
+              <th scope="" class="text-center">Estatus</th>
               <th scope="">Acciónes </th>
             </tr>
           </thead>
@@ -58,6 +59,13 @@
               <td>{{ item.nombre_moneda}}</td>
               <td>{{ item.monto_reembolsar | currency: '$'}}</td>
               <td>{{ item.nombre_usuario_aprobador}}</td>
+
+              <td class='ajustar_nota'>
+                <div>
+                  {{ item.estatus }}
+                </div>
+              </td>
+
               <td>
                 <div style="white-space: nowrap">
                   <a *ngIf="item.estatus.toLowerCase() == 'borrador'" class="btn btn-danger text-white btn ml-2"
